Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-05-26
----------
- New RISC OS resources files for lua; fixed using some quick hacks.
  (ajps)
- A new set of RISC OS resources, with many changes and now looking
  much more like Angband source code. (takkaria)

2002-05-24
----------
- New randart code is in!  Savefile compatibility is lost, sadly.
  (takkaria)

2002-05-18
----------
- Moved divisions after multiplications in resist_player_current in
  two places, so that precisions aren't lost. (pelpel)

2002-05-12
----------
- Made timed resists decrement over time; quite cool code, don't know
  how to explain it clearly, really. (takkaria)
- Made the "display version" command show the splash screen. (takkaria)
- Fixed array indices into k_info in object.lua -- C's k_info[0] corresponds
  to k_info[1] in Lua. (pelpel)
- Big screen support for GCU. As nangband -? says, it can be activated
  by nangband -- -b. Curses implementations react differently to SIGWINCH
  and I have no idea how to implement portable resizing... (pelpel)
- Imported lua bit operator implementation from Vanilla 3.0.0 CVS,
  which compiles on lcc, doesn't offend some cpp's with empty arguments
  and is more readable. (pelpel)
- Moved up the "Remaining gold:" display by one line, so that it doesn't
  interact strangely with the shop action prompt. (pelpel)
- Imported a couple of my lua engine fixes cleaned up by rr9 --
  this is only relevant for users of CodeWarrior. (pelpel)
- Removed size_y hack in store.c and rewrote the entire file to use the
  real display height throughout, partly for the sake of clarity and
  partly because it was responsible for some display problems. (pelpel)

2002-05-02
----------
- Fixed bug with monster blows, as suggested by pelpel. (parody)

2002-04-30
----------
- Fixed up lots of the save code, thanks pelpel. (takkaria)
- Added pelpel's equippy chars patch; they are now an option. (takkaria)