@@ -112,7 +112,6 @@ typedef int errr;
  */
 #define MFLAG_VIEW	0x01	/* Monster is in line of sight */
 /* xxx */
-#define MFLAG_BORN	0x10	/* Monster is still being born */
 #define MFLAG_NICE	0x20	/* Monster is still being nice */
 #define MFLAG_SHOW	0x40	/* Monster is recently memorized */
 #define MFLAG_MARK	0x80	/* Monster is currently memorized */
