@@ -1,5 +1,5 @@
 /*
-** $Id: lopcodes.h,v 1.1 2002/02/11 19:15:00 takkaria Exp $
+** $Id: lopcodes.h,v 1.2 2002/06/02 18:23:03 takkaria Exp $
 ** Opcodes for Lua virtual machine
 ** See Copyright Notice in lua.h
 */
@@ -154,15 +154,5 @@ OP_CLOSURE/*	A B	v_b-v_1		closure(KPROTO[a], v_1-v_b)	*/
 
 
 #define ISJUMP(o)	(OP_JMPNE <= (o) && (o) <= OP_JMP)
-
-
-
-/* special code to fit a LUA_MULTRET inside an argB */
-#define MULT_RET        255	/* (<=MAXARG_B) */
-#if MULT_RET>MAXARG_B
-#undef MULT_RET
-#define MULT_RET	MAXARG_B
-#endif
-
 
 #endif
